--- a/config.json
+++ b/config.json
@@ -1,47 +1,71 @@
 {
   "settings": {
-    "indexwww": true,
+    "indexwww": false,
     "first": "",
     "second": "",
     "third": ""
   },
   "projects": [
     {
-      "version": "0.9",
-      "name": "Esprit Esport",
-      "description": "Plateforme autonome d'actualité E-Sportive offrant la possibilité d'organiser des tournois entre joueurs.",
+      "version": "1.3 Beta",
+      "name": "Consectetur Adipisicing",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
       "website": "esprit-esport.com/",
       "link": {
-        "Login": "login",
-        "Index": ""
+        "Excepteur": "login",
+        "Oofficia": "login"
       },
       "otherlink": {
-        "League of legend": "http://leagueoflegend.com"
+        "Ddeserunt": "http://leagueoflegend.com",
+        "Imollit": "http://leagueoflegend.com",
+        "Llaborum": "http://leagueoflegend.com"
       }
     },
     {
-      "version": "1.0",
-      "name": "Blog TiDJ",
-      "description": "Blog ou je parle de l'actualité informatique",
-      "website": "tomjamon.com/blog/",
+      "version": "0.5 Alpha",
+      "name": "Lorem ipsum",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  ut labore et dolore.",
+      "website": "esprit-esport.com/",
       "link": {
-        "Login": "login",
-        "Index": ""
+        "consectetur": "login",
+        "adipisicing": "login",
+        "Ccupidatat": "login"
       },
       "otherlink": {
-        "Bootstrap": "http://getbootstrap.com/"
+        "labore": "http://leagueoflegend.com",
+        "consectetur": "http://leagueoflegend.com"
       }
     },
     {
-      "version": "1.5",
-      "name": "My Ebook",
-      "description": "My Ebook Rasp",
-      "website": "localhost/ebook/",
+      "version": "0.0.2 Delta",
+      "name": "Tempor",
+      "description": "Lorem ipsum dolor sit amet, consectetur  elit, sed do eiusmod tempor incididunt ut labore et dolore magnalamap.",
+      "website": "esprit-esport.com/",
       "link": {
-        "1": "2"
+        "incididunt": "login",
+        "Oofficia": "login",
+        "dolore": "login"
       },
       "otherlink": {
-        "3": "4"
+        "Ddeserunt": "http://leagueoflegend.com",
+        "eiusmod": "http://leagueoflegend.com",
+        "Llaborum": "http://leagueoflegend.com"
+      }
+    },
+    {
+      "version": "0.3 Beta",
+      "name": "Incididunt",
+      "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et aliqua.",
+      "website": "esprit-esport.com/",
+      "link": {
+        "ipsum": "login",
+        "Oofficia": "login",
+        "amet": "login"
+      },
+      "otherlink": {
+        "Ddeserunt": "http://leagueoflegend.com",
+        "Lorem": "http://leagueoflegend.com",
+        "Llaborum": "http://leagueoflegend.com"
       }
     }
   ]
