--- a/config.json
+++ b/config.json
@@ -8,64 +8,63 @@
   "projects": [
     {
       "version": "1.3 Beta",
-      "name": "Consectetur Adipisicing",
+      "name": "My Project 1",
       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
       "website": "esprit-esport.com/",
       "link": {
-        "Excepteur": "login",
-        "Oofficia": "login"
+        "Index": "localhost/myproject/index",
+        "Login": "localhost/myproject/login"
       },
       "otherlink": {
-        "Ddeserunt": "http://leagueoflegend.com",
-        "Imollit": "http://leagueoflegend.com",
-        "Llaborum": "http://leagueoflegend.com"
+        "Librairie 1": "http://getbootstrap.com",
+        "Librairie 2": "http://getbootstrap.com",
+        "Librairie 3": "http://getbootstrap.com"
       }
     },
     {
       "version": "0.5 Alpha",
-      "name": "Lorem ipsum",
+      "name": "My Project 2",
       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor  ut labore et dolore.",
       "website": "esprit-esport.com/",
       "link": {
-        "consectetur": "login",
-        "adipisicing": "login",
-        "Ccupidatat": "login"
+        "Index": "localhost/myproject/index",
+        "Login": "localhost/myproject/login",
+        "Profil": "localhost/myproject/profil"
       },
       "otherlink": {
-        "labore": "http://leagueoflegend.com",
-        "consectetur": "http://leagueoflegend.com"
+        "Librairie 1": "http://getbootstrap.com",
+        "Librairie 2": "http://getbootstrap.com"
       }
     },
     {
       "version": "0.0.2 Delta",
-      "name": "Tempor",
+      "name": "My Project 3",
       "description": "Lorem ipsum dolor sit amet, consectetur  elit, sed do eiusmod tempor incididunt ut labore et dolore magnalamap.",
       "website": "esprit-esport.com/",
       "link": {
-        "incididunt": "login",
-        "Oofficia": "login",
-        "dolore": "login"
+        "Index": "localhost/myproject/index",
+        "Login": "localhost/myproject/login",
+        "Profil": "localhost/myproject/profil"
       },
       "otherlink": {
-        "Ddeserunt": "http://leagueoflegend.com",
-        "eiusmod": "http://leagueoflegend.com",
-        "Llaborum": "http://leagueoflegend.com"
+        "Librairie 1": "http://getbootstrap.com",
+        "Librairie 2": "http://getbootstrap.com",
+        "Librairie 3": "http://getbootstrap.com"
       }
     },
     {
       "version": "0.3 Beta",
-      "name": "Incididunt",
+      "name": "My Project 4",
       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et aliqua.",
       "website": "esprit-esport.com/",
       "link": {
-        "ipsum": "login",
-        "Oofficia": "login",
-        "amet": "login"
+        "Index": "localhost/myproject/index",
+        "Login": "localhost/myproject/login",
+        "Profil": "localhost/myproject/profil"
       },
       "otherlink": {
-        "Ddeserunt": "http://leagueoflegend.com",
-        "Lorem": "http://leagueoflegend.com",
-        "Llaborum": "http://leagueoflegend.com"
+        "Librairie 1": "http://getbootstrap.com",
+        "Librairie 2": "http://getbootstrap.com"
       }
     }
   ]
